[Blender 2.8] Knife Tool Buggy #70455

Closed
opened 2019-10-02 18:26:43 +02:00 by Catalin · 14 comments

System Information
Operating system: Windows
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2

Blender Version
Broken: 2.81 (sub 11), branch: master, commit date: 2019-09-17 19:54, hash: 9609840b5e, type: Release
Worked: (got bugs in 2.80 too)

Short description of error
Using knife tool on this strip of polygons there is 50-50 chance to get buggy .

Exact steps for others to reproduce the error

  1. Select the knife tool
  2. Cut the edges
  3. Drop the tool then select the vertices
  4. See in gif

Here's a gif with the bug .knifeToolBuggy.gif

Knife.jpg

Shape.obj
knife_bug.blend

**System Information** Operating system: Windows Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 **Blender Version** Broken: 2.81 (sub 11), branch: master, commit date: 2019-09-17 19:54, hash: 9609840b5ea1, type: Release Worked: (got bugs in 2.80 too) **Short description of error** Using knife tool on this strip of polygons there is 50-50 chance to get buggy . **Exact steps for others to reproduce the error** 1. Select the knife tool 2. Cut the edges 3. Drop the tool then select the vertices 4. See in gif Here's a gif with the bug .![knifeToolBuggy.gif](https://archive.blender.org/developer/F7785895/knifeToolBuggy.gif) ![Knife.jpg](https://archive.blender.org/developer/F7785894/Knife.jpg) [Shape.obj](https://archive.blender.org/developer/F7785893/Shape.obj) [knife_bug.blend](https://archive.blender.org/developer/F7787389/knife_bug.blend)
Author

Added subscriber: @giakaama

Added subscriber: @giakaama

Added subscribers: @ideasman42, @mano-wii

Added subscribers: @ideasman42, @mano-wii
Campbell Barton was assigned by Germano Cavalcante 2019-10-03 14:53:54 +02:00

This comment was removed by @mano-wii

*This comment was removed by @mano-wii*

Added subscriber: @vademenev

Added subscriber: @vademenev
Campbell Barton was unassigned by Dalai Felinto 2019-12-23 13:48:28 +01:00
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Seems to work for me. @mano-wii, am I doing something wrong?

@giakaama, do you have the same issue still?

2020-01-29 12-42-50.mp4

Seems to work for me. @mano-wii, am I doing something wrong? @giakaama, do you have the same issue still? [2020-01-29 12-42-50.mp4](https://archive.blender.org/developer/F8309801/2020-01-29_12-42-50.mp4)

In #70455#861743, @JacquesLucke wrote:
Seems to work for me. @mano-wii, am I doing something wrong?

It's still broken for me:
knife_bug.gif

Avoid orbiting the 3d view.

> In #70455#861743, @JacquesLucke wrote: > Seems to work for me. @mano-wii, am I doing something wrong? It's still broken for me: ![knife_bug.gif](https://archive.blender.org/developer/F8309962/knife_bug.gif) Avoid orbiting the 3d view.
Member

Weird, I'm trying to copy you as closely as possible, but still cannot reproduce it.

2020-01-29 13-18-12.mp4

Weird, I'm trying to copy you as closely as possible, but still cannot reproduce it. [2020-01-29 13-18-12.mp4](https://archive.blender.org/developer/F8310012/2020-01-29_13-18-12.mp4)

Added subscriber: @Positivity

Added subscriber: @Positivity

{F8542769}I can confirm this, and this happens if you use a Tool from a shelf or pres K button. If the tool is activated with the command from the search box it seems to work correctly. Don't know what is a difference in thous 2 but there is.
First, when you activate a tool with K it doesn't show green vertex snapping dot. but when you do it with a command like in your Video(Jacques Lucke) it does show dot straight away.

UPDATE: after a bit more use of knife tool from search box it started again do the same thing as Germano shows, making weird cuts.

{[F8542769](https://archive.blender.org/developer/F8542769/8gZFIyFmZI.mp4)}I can confirm this, and this happens if you use a Tool from a shelf or pres K button. If the tool is activated with the command from the search box it seems to work correctly. Don't know what is a difference in thous 2 but there is. First, when you activate a tool with K it doesn't show green vertex snapping dot. but when you do it with a command like in your Video(Jacques Lucke) it does show dot straight away. UPDATE: after a bit more use of knife tool from search box it started again do the same thing as Germano shows, making weird cuts.

Added subscriber: @Ilya123

Added subscriber: @Ilya123

knife.png I can confirm it too. Version 2.83.1., knife tool creates excess vertex near edge

![knife.png](https://archive.blender.org/developer/F8657677/knife.png) I can confirm it too. Version 2.83.1., knife tool creates excess vertex near edge

This issue was referenced by ac5f011e9c

This issue was referenced by ac5f011e9c1fa7256b028c4b829f56470b1e8217

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-07-20 13:54:51 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70455
No description provided.